# boilerplate

./: .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.bat  setup.sh  wsgi.py
app/: __init__.py  models.py
app/ai/: routes.py
app/auth/: routes.py
app/main/: routes.py
app/payments/: routes.py
migrations/versions/: ad45b93b01f2_init.py
static/css/: style.css
static/js/: script.js
templates/: ai_tool.html  base.html  credits.html  dashboard.html  demo.html  index.html  login.html  payments.html  signup.html
